--- a/index.html
+++ b/index.html
@@ -3,17 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitFunded - Home</title>
+    <title>GitFunded - ModMenu</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="background"></div>
     <div class="content">
         <h1 class="animated-text">Welcome to GitFunded</h1>
-        <p class="description">
-            I enjoy development and cyber security, building web-based hacking tools, and creating mods.<br>
-            I also love making beats and doing graphic design.
-        </p>
+        <div class="modmenu">
+            <div class="menu-item">
+                <h2 class="menu-title">Software & Open Learning Resources</h2>
+                <ul>
+                    <li><a href="https://www.freecodecamp.org/" target="_blank">FreeCodeCamp</a></li>
+                    <li><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></li>
+                    <li><a href="https://ocw.mit.edu/" target="_blank">MIT OpenCourseWare</a></li>
+                </ul>
+            </div>
+            <div class="menu-item">
+                <h2 class="menu-title">Web Development Resources</h2>
+                <ul>
+                    <li><a href="https://developer.mozilla.org/" target="_blank">MDN Web Docs</a></li>
+                    <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>
+                    <li><a href="https://css-tricks.com/" target="_blank">CSS-Tricks</a></li>
+                </ul>
+            </div>
+            <div class="menu-item">
+                <h2 class="menu-title">Python Development Resources</h2>
+                <ul>
+                    <li><a href="https://www.python.org/" target="_blank">Python.org</a></li>
+                    <li><a href="https://realpython.com/" target="_blank">Real Python</a></li>
+                    <li><a href="https://www.learnpython.org/" target="_blank">Learn Python</a></li>
+                </ul>
+            </div>
+            <div class="menu-item">
+                <h2 class="menu-title">AI & Machine Learning</h2>
+                <ul>
+                    <li><a href="https://www.tensorflow.org/" target="_blank">TensorFlow</a></li>
+                    <li><a href="https://pytorch.org/" target="_blank">PyTorch</a></li>
+                    <li><a href="https://www.kaggle.com/" target="_blank">Kaggle</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </body>
 </html>
